--- a/packages/share/android/build.gradle
+++ b/packages/share/android/build.gradle
@@ -61,5 +61,5 @@ afterEvaluate {
 
 dependencies {
     // use support-compat starting from 28.0.0
-    implementation 'com.android.support:support-core-utils:27.1.1'
+    implementation 'androidx.legacy:legacy-support-core-utils:1.0.0'
 }
