--- a/packages/share/android/build.gradle
+++ b/packages/share/android/build.gradle
@@ -60,6 +60,5 @@ afterEvaluate {
 }
 
 dependencies {
-    // use support-compat starting from 28.0.0
-    implementation 'androidx.legacy:legacy-support-core-utils:1.0.0'
+    implementation 'androidx.core:core:1.1.0'
 }
